@@ -8,8 +8,11 @@ python:
     - 3.5
 install:
     - pip install -U pip
+    - pip install -U coverage coveralls
     - pip install .[test]
 script:
-    - python setup.py test -q
+    - coverage run setup.py test -q
+after_success:
+  - coveralls
 notifications:
     email: false
