@@ -12,6 +12,8 @@ CHANGES
 
 - Dropped support for Python 2.6.
 
+- Achieve 100% code test coverage.
+
 
 1.0.0 (2013-03-01)
 ------------------
@@ -39,7 +41,7 @@ CHANGES
 0.7.0 (2010-10-18)
 ------------------
 
-- Updated tests to run with `zope.schema` >= 3.6, thus requiring at least
+- Updated tests to run with ``zope.schema`` >= 3.6, thus requiring at least
   this version.
 
 - Using Python's ``doctest`` module instead of depreacted
